--- a/src/styles.less
+++ b/src/styles.less
@@ -11,6 +11,10 @@ hr {
     margin-bottom: 0.5rem;
 }
 
+table {
+    table-layout: fixed;
+}
+
 .light-weight {
     font-weight: 300;
 }
@@ -144,15 +148,19 @@ hr {
     background-color: white;
 }
 
-.bg-light {
+.bg-header {
     background-color: #efefef;
+}
+
+
+.bg-light {
+    background-color: #ddd;
 }
 
 .bg-dark {
     background-color: #525252;
     color: white;
 }
-
 
 label {
     color: #636c72;
