--- a/src/app/shared/vote-handle/vote-handle.component.html
+++ b/src/app/shared/vote-handle/vote-handle.component.html
@@ -1,15 +1,12 @@
 <div class="vote-handle w-100 mt-1">
     <div class="vote-indicator bg-light">
-        <div class="bg-primary" [style.width]="voteData.plus / (voteData.plus + voteData.minus) * 100 + '%'">
-
+        <div *ngIf="voteData.plus + voteData.minus > 0" class="bg-primary" [style.width]="voteData.plus / (voteData.plus + voteData.minus) * 100 + '%'">
         </div>
     </div>
-    <div class="text-center text-primary"
-         placement="top"
-         [ngbTooltip]="'+' + voteData.plus + ' / -' + voteData.minus">
-         <small class="no-wrap">{{ voteData.plus }} - {{ voteData.minus }}</small>
+    <div class="text-center text-primary">
+         <small class="no-wrap">{{ voteData.plus | shortNumber }} - {{ voteData.minus | shortNumber }}</small>
     </div>
-    <div class="d-flex flex-row justify-content-between">
+    <div *ngIf="!readOnly" class="d-flex flex-row justify-content-between">
         <button type="button"
                 class="btn no-border-button icon-button btn-outline-primary"
                 [class.text-light]="voteData.own !== 1"
