--- a/src/app/shared/user-label/user-label.component.html
+++ b/src/app/shared/user-label/user-label.component.html
@@ -1,3 +1,3 @@
 <div class="user-label bg-light">
-    <img *ngIf="user.imgUrl" width="100%" src="{{ user.imgUrl }}">
+    <img width="100%" src="{{ user.imgUrl }}?size=64">
 </div>
