--- a/src/styles.less
+++ b/src/styles.less
@@ -15,6 +15,10 @@ table {
     table-layout: fixed;
 }
 
+img {
+    max-width: 100%; /* required by CropperJS */
+}
+
 .light-weight {
     font-weight: 300;
 }
@@ -30,6 +34,9 @@ table {
     }
     &.tiny {
         font-size: 0.6rem;
+    }
+    &.large {
+        font-size: 3rem;
     }
 }
 
