--- a/src/app/core/user-login-link/user-login-link.component.html
+++ b/src/app/core/user-login-link/user-login-link.component.html
@@ -5,9 +5,9 @@
     <div *ngSwitchCase="true" ngbDropdown class="d-inline-block">
         <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Account&nbsp;</button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownBasic1">
-            <h6 class="dropdown-header">{{ getUser().name }}</h6>
+            <a class="dropdown-item" [routerLink]="['/user', getUser().id]">{{ getUser().name }}</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/user', getUser().id]">Details</a>
+            <a class="dropdown-item" [routerLink]="['/settings']">Settings</a>
             <button class="dropdown-item" (click)="logout()">Logout</button>
         </div>
     </div>
