--- a/src/app/shared/user-label/user-label.component.html
+++ b/src/app/shared/user-label/user-label.component.html
@@ -1,3 +1,3 @@
-<div class="user-label bg-light">
-    <img width="100%" src="{{ user.imgUrl }}?size=64">
+<div class="user-label">
+    <cmm-user-avatar [user]="user" [size]="64"></cmm-user-avatar>
 </div>
