--- a/src/app/shared/user-avatar-select/user-avatar-select.component.html
+++ b/src/app/shared/user-avatar-select/user-avatar-select.component.html
@@ -1,3 +1,11 @@
 
+<form>
+    <div class="form-group">
+        <label class="custom-file">
+            <input type="file" id="file" class="custom-file-input">
+            <span class="custom-file-control"></span>
+        </label>
+    </div>
+</form>
 <cmm-cropper [src]="imgSrc" [preview]="cropperPreview"></cmm-cropper>
 <div class="crop-preview-64" #cropperPreview></div>
