--- a/src/styles.less
+++ b/src/styles.less
@@ -172,3 +172,7 @@ img {
 label {
     color: #636c72;
 }
+
+
+.custom-file-control::before{content:"Browse"}
+.custom-file-control::after{content:"Choose File..."}
