--- a/src/app/shared/user-avatar/user-avatar.component.html
+++ b/src/app/shared/user-avatar/user-avatar.component.html
@@ -1,4 +1,4 @@
-<img *ngIf="user.hasAvatar" src="{{ user.imgUrl }}?size={{size}}">
+<img *ngIf="user.hasAvatar" src="{{ imgUrl }}">
 <div class="avatar-placeholder"
      *ngIf="!user.hasAvatar"
      [style.width]="size + 'px'"
