--- a/src/app/shared/user-avatar-select/user-avatar-select.component.html
+++ b/src/app/shared/user-avatar-select/user-avatar-select.component.html
@@ -1,13 +1,6 @@
 
-<form>
-    <div class="form-group">
-        <label class="custom-file">
-            <input type="file" id="file" class="custom-file-input">
-            <span class="custom-file-control"></span>
-        </label>
-    </div>
-</form>
+<cmm-img-select (select)="imgSelect($event)"></cmm-img-select>
 <div *ngIf="imgSrc">
     <cmm-cropper [src]="imgSrc" [preview]="cropperPreview" (cropped)="cropHandler($event)"></cmm-cropper>
-    <div class="crop-preview-64" #cropperPreview></div>
 </div>
+<button class="btn btn-primary" (click)="upload()">Upload</button>
