--- a/src/app/shared/user-avatar-select/user-avatar-select.component.less
+++ b/src/app/shared/user-avatar-select/user-avatar-select.component.less
@@ -1,5 +1,5 @@
-.crop-preview-64 {
-    width: 64px;
-    height: 64px;
+.crop-preview {
+    width: 256px;
+    height: 256px;
     overflow: hidden;
 }
